Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
Impala 2.3.0
-
None
-
impalad version 2.3.0-cdh5-INTERNAL DEBUG (build 77e2ec195f4f4ebbef1705d6aef03c45f542ea35)
Built on Tue, 01 Sep 2015 12:03:41 PST
Description
The stress test is consistently hitting the DCHECK
F0902 08:04:05.890946 29335 buffered-block-mgr.cc:492] Check failed: query_to_block_mgrs_.find(query_id_) != query_to_block_mgrs_.end()
For some reason the core files are not complete and getting a backtrace doesnt work.