IMPALA-2286: Fix race between ~BufferedBlockMgr() and BufferedBlockMgr::Create()

The race, described below, can lead to:
   DCHECK: query_to_block_mgrs_.find(query_id_) != query_to_block_mgrs_.end()

Another fragment may have called Create() for this query_id_ and
saw that this BufferedBlockMgr is being destructed.  That fragement will
overwrite the map entry for query_id_, pointing it to a different
BufferedBlockMgr object.  We should let that object's destructor remove the
entry.  On the other hand, if the second BufferedBlockMgr is destructed before
this thread acquires the lock, then we'll remove the entry (because we can't
distinguish between the two expired pointers), and when the other
~BufferedBlockMgr() call occurs, it won't find an entry for this query_id_.

Change-Id: I18a9d965e0689adc4ee9b837eef19a21e0683a64
Reviewed-on: http://gerrit.cloudera.org:8080/772
Reviewed-by: Dan Hecht <dhecht@cloudera.com>
Tested-by: Internal Jenkins